@@ -36,6 +36,9 @@ cat("\n")
 anytime(c("Thu Sep 01 10:11:12 2016", "Thu Sep 01 10:11:12.345678 2016"))
 
 cat("\n")
+anytime(c("Thu 01 Sep 2016 10:11:12", "Thu 01 Sep 2016 10:11:12.345678"))
+
+cat("\n")
 anytime(c("2016-09-01", "20160901", "09/01/2016", "09-01-2016"))
 
 cat("\n")
