@@ -1,3 +1,8 @@
+2016-10-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp (sformats[]): New format for RFC 822 style date
+	* tests/allFormats.R: New test
+
 2016-10-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* NAMESPACE: Adding utctime() and utcdate() to export()
@@ -54,7 +59,7 @@
 
 2016-10-14  Dirk Eddelbuettel  <edd@debian.org>
 
-	* src/anytime.cpp (sformats[]]): Add several new date(time) formats
+	* src/anytime.cpp (sformats[]): Add several new date(time) formats
 	of the 14OCT2016 variety, with and without hours/minutes
 
 	* tests/allFormats.R: Add new tests as well
